<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book__main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.BookEditActivity">


    <EditText
        android:id="@+id/activity_book_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/activity_book_hint_name"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/activity_book_edt_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/activity_book_hint_author"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/activity_book_edt_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="4"
        android:hint="@string/activity_book_hint_year"
        android:imeOptions="actionDone"
        />

    <Button
        android:id="@+id/activity_book_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_book_button_save"/>

    <Button
        android:id="@+id/activity_book_btn_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/activity_book_button_remove"/>

</LinearLayout>
